cgsv/mrs_2.0.0/mrs/include/mrs.hpp


#define MRS_VERSION_KEY "mrs"
#define MRS_LOG_EMERG( _format, ... )   MRS_OUTPUT_LOG( MRS_LOG_LEVEL_EMERG,   _format, ##__VA_ARGS__ )
#define MRS_LOG_ALERT( _format, ... )   MRS_OUTPUT_LOG( MRS_LOG_LEVEL_ALERT,   _format, ##__VA_ARGS__ )
#define MRS_LOG_CRIT( _format, ... )    MRS_OUTPUT_LOG( MRS_LOG_LEVEL_CRIT,    _format, ##__VA_ARGS__ )
#define MRS_LOG_ERR( _format, ... )     MRS_OUTPUT_LOG( MRS_LOG_LEVEL_ERR,     _format, ##__VA_ARGS__ )
#define MRS_LOG_WARNING( _format, ... ) MRS_OUTPUT_LOG( MRS_LOG_LEVEL_WARNING, _format, ##__VA_ARGS__ )
#define MRS_LOG_NOTICE( _format, ... )  MRS_OUTPUT_LOG( MRS_LOG_LEVEL_NOTICE,  _format, ##__VA_ARGS__ )
#define MRS_LOG_INFO( _format, ... )    MRS_OUTPUT_LOG( MRS_LOG_LEVEL_INFO,    _format, ##__VA_ARGS__ )
#define MRS_LOG_DEBUG( _format, ... )   MRS_OUTPUT_LOG( MRS_LOG_LEVEL_DEBUG,   _format, ##__VA_ARGS__ )
MRS_API bool MRS_API_CC mrs_initialize();
MRS_API void MRS_API_CC mrs_update();
MRS_API void MRS_API_CC mrs_update_keep_alive();
MRS_API void MRS_API_CC mrs_run( uint32 sleep_msec );
MRS_API void MRS_API_CC mrs_stop_running();
MRS_API void MRS_API_CC mrs_finalize();
MRS_API uint32 MRS_API_CC mrs_get_connection_num_hard_limit();
MRS_API uint32 MRS_API_CC mrs_get_connection_num_soft_limit();
MRS_API bool MRS_API_CC mrs_set_connection_num_soft_limit( uint32 value );
MRS_API uint32 MRS_API_CC mrs_get_connection_num();
MRS_API uint32 MRS_API_CC mrs_server_get_connection_num( MrsServer server );
MRS_API MrsServer MRS_API_CC mrs_server_create( MrsConnectionType type, const char* addr, uint16 port, int32 backlog );
MRS_API void MRS_API_CC mrs_server_set_new_connection_callback( MrsServer server, MrsNewConnectionCallback callback );
MRS_API bool MRS_API_CC mrs_server_set_data( MrsServer server, void* server_data );
MRS_API void* MRS_API_CC mrs_server_get_data( MrsServer server );
MRS_API MrsConnection MRS_API_CC mrs_connect( MrsConnectionType type, const char* addr, uint16 port, uint32 timeout_msec );
MRS_API void MRS_API_CC mrs_set_connect_callback( MrsConnection connection, MrsConnectCallback callback );
MRS_API void MRS_API_CC mrs_set_disconnect_callback( MrsConnection connection, MrsDisconnectCallback callback );
MRS_API void MRS_API_CC mrs_set_error_callback( MrsConnection connection, MrsErrorCallback callback );
MRS_API void MRS_API_CC mrs_set_read_record_callback( MrsConnection connection, MrsReadRecordCallback callback );
MRS_API void MRS_API_CC mrs_set_read_callback( MrsConnection connection, MrsReadCallback callback );
MRS_API bool MRS_API_CC mrs_connection_set_data( MrsConnection connection, void* connection_data );
MRS_API void* MRS_API_CC mrs_connection_get_data( MrsConnection connection );
MRS_API bool MRS_API_CC mrs_connection_is_connected( MrsConnection connection );
MRS_API bool MRS_API_CC mrs_connection_set_readbuf_max_size( MrsConnection connection, uint32 value );
MRS_API uint32 MRS_API_CC mrs_connection_get_readbuf_max_size( MrsConnection connection );
MRS_API MrsConnectionType MRS_API_CC mrs_connection_get_type( MrsConnection connection );
MRS_API bool MRS_API_CC mrs_connection_set_path( MrsConnection connection, const char* value );
MRS_API const char* MRS_API_CC mrs_connection_get_path( MrsConnection connection );
MRS_API bool MRS_API_CC mrs_write_record( MrsConnection connection, uint16 options, uint16 payload_type, const void* payload, uint32 payload_len );
MRS_API bool MRS_API_CC mrs_write( MrsConnection connection, const void* data, uint32 data_len );
MRS_API MrsCipher MRS_API_CC mrs_cipher_create( MrsCipherType type );
MRS_API bool MRS_API_CC mrs_is_output_log_level( MrsLogLevel level );
MRS_API void MRS_API_CC mrs_output_log( MrsLogLevel level, const char* msg );