cgsv/mrs_2.0.0/mrs/sample/unity/sample/Assets/Monobit/Plugins/iOS/Monobit/mrs/include/mrs/common.hpp

typedef uint16_t           uint16;
typedef uint32_t           uint32;
enum MrsLogLevel {
    MRS_LOG_LEVEL_EMERG   = 0, 
    MRS_LOG_LEVEL_ALERT   = 1, 
    MRS_LOG_LEVEL_CRIT    = 2, 
    MRS_LOG_LEVEL_ERR     = 3, 
    MRS_LOG_LEVEL_WARNING = 4, 
    MRS_LOG_LEVEL_NOTICE  = 5, 
    MRS_LOG_LEVEL_INFO    = 6, 
    MRS_LOG_LEVEL_DEBUG   = 7, 
};
enum MrsConnectionType {
    MRS_CONNECTION_TYPE_NONE    = 0, 
    MRS_CONNECTION_TYPE_TCP     = 1, 
    MRS_CONNECTION_TYPE_UDP     = 2, 
    MRS_CONNECTION_TYPE_WS      = 3, 
    MRS_CONNECTION_TYPE_WSS     = 4, 
    MRS_CONNECTION_TYPE_TCP_SSL = 5, 
    MRS_CONNECTION_TYPE_MRU     = 6, 
};
enum MrsCipherType {
    MRS_CIPHER_TYPE_NONE = 0, 
    MRS_CIPHER_TYPE_ECDH = 1, 
};
enum MrsError {
    MRS_NO_ERROR        = 0,  
    MRS_ENOENT          = 2,  
    MRS_ENOMEM          = 12, 
    MRS_EACCES          = 13, 
    MRS_EMFILE          = 24, 
    MRS_EADDRINUSE      = 48, 
    MRS_EADDRNOTAVAIL   = 49, 
    MRS_ENETUNREACH     = 51, 
    MRS_ETIMEDOUT       = 60, 
    MRS_EHOSTUNREACH    = 65, 
    MRS_ECONNECTIONTYPE = 0xF001, 
    MRS_EBACKLOG        = 0xF002, 
    MRS_ECONNECTIONNUM  = 0xF003, 
};
enum MrsConnectionError {
    MRS_CONNECT_ERROR                   = 1,  
    MRS_CONNECT_TIMEOUT                 = 2,  
    MRS_WRITE_ERROR                     = 3,  
    MRS_KEY_EXCHANGE_REQUEST_ERROR      = 4,  
    MRS_KEY_EXCHANGE_RESPONSE_ERROR     = 5,  
    MRS_PEER_CONNECTION_HARD_LIMIT_OVER = 6,  
    MRS_CONNECTION_READBUF_SIZE_OVER    = 7,  
    MRS_KEEPALIVE_TIMEOUT               = 8,  
    MRS_PROTOCOL_ERROR                  = 9,  
    MRS_READ_INVALID_RECORD_ERROR       = 10, 
    MRS_LISTEN_ERROR                    = 11, 
    MRS_RESOLVE_ADDRESS_ERROR           = 12, 
    MRS_RESOLVE_ADDRESS_TIMEOUT         = 13, 
    MRS_WRITE_ERROR_MRU_OVER_MTU        = 14, 
    MRS_WRITE_ERROR_MRU_SENDQ_FULL      = 15, 
};
enum MrsRecordOption {
    MRS_RECORD_OPTION_NONE            = 0x00, 
    MRS_RECORD_OPTION_ON_CRYPT        = 0x01, 
    MRS_RECORD_OPTION_UDP_UNRELIABLE  = 0x02, 
    MRS_RECORD_OPTION_UDP_UNSEQUENCED = 0x04, 
};
enum MrsPayloadType {
    MRS_PAYLOAD_TYPE_BEGIN = 0x00, 
    MRS_PAYLOAD_TYPE_END   = 0xFF, 
};
typedef void* MrsServer;
typedef void* MrsConnection;
typedef void* MrsCipher;
typedef void (MRS_API_CC *MrsLogOutputCallback)( MrsLogLevel level, const char* msg );
typedef void (MRS_API_CC *MrsNewConnectionCallback)( MrsServer server, void* server_data, MrsConnection client );
typedef void (MRS_API_CC *MrsConnectCallback)( MrsConnection connection, void* connection_data );
typedef void (MRS_API_CC *MrsDisconnectCallback)( MrsConnection connection, void* connection_data );
typedef void (MRS_API_CC *MrsErrorCallback)( MrsConnection connection, void* connection_data, MrsConnectionError status );
typedef void (MRS_API_CC *MrsReadRecordCallback)( MrsConnection connection, void* connection_data, uint32 seqnum, uint16 options, uint16 payload_type, const void* payload, uint32 payload_len );
typedef void (MRS_API_CC *MrsReadCallback)( MrsConnection connection, void* connection_data, const void* data, uint32 data_len );
typedef void (MRS_API_CC *MrsKeyExchangeCallback)( MrsConnection connection, void* connection_data );